force-app/main/default/objects/Contact_Engagement_Score__c/Contact_Engagement_Score__c.object-meta.xml
<CustomObject>
    <label>Contact Engagement Score</label>
    <nameField>
        <displayFormat>ESID-{0000}</displayFormat>
        <label>Engagement Score ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Engagement Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>