force-app/main/default/objects/Contact_Engagement_Score__c/fields/Created_Outside_Batch__c.field-meta.xml
<CustomField>
    <fullName>Created_Outside_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created Outside Batch</label>
    <type>Checkbox</type>
</CustomField>