force-app/main/default/objects/Contact_Engagement_Score__c/fields/Processing_Method__c.field-meta.xml
<CustomField>
    <fullName>Processing_Method__c</fullName>
    <label>Processing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Batch</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>