force-app/main/default/objects/Contact_Engagement_Score__c/fields/Week_of_the_Year__c.field-meta.xml
<CustomField>
    <fullName>Week_of_the_Year__c</fullName>
    <formula>FLOOR( (End_Date__c - DATE(YEAR( End_Date__c ), 1, 1) + 7) / 7 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week of the Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>