force-app/main/default/objects/Contact_Engagement_Score__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact_Consultant__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Overall_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>